Added default value methods to Parser; Added jar